# libera-timecode

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSING.md  README.md  TRADEMARKS.md
.github/workflows/: build.yml  ci.yml
cmake/: Info.plist.in
docs/: ci-release.md
icons/: build-icons.sh  libera-timecode.icns  libera-timecode.rc
reports/timecode-jitter/: README.md  jitter-30min-outliers.csv  jitter-30min.csv
src/: AppActivity.h  AppActivity_macos.mm  AppActivity_other.cpp  LiberaApp.cpp  LiberaApp.h  Paths.cpp  Paths.hpp  Settings.cpp  Settings.h  ThreadQos.cpp  ThreadQos.h  Timecode.cpp  Timecode.h  TimecodeEngine.cpp  TimecodeEngine.h  gui_main.cpp
src/fonts/: ForkAwesome.cpp  RobotoBold.cpp  RobotoMedium.cpp
src/outputs/: ArtnetOutput.cpp  ArtnetOutput.h  LtcProtocol.h  MidiOutput.cpp  MidiOutput.h  OutputTiming.h  SmpteOutput.cpp  SmpteOutput.h  SntcOutput.cpp  SntcOutput.h  TimecodeProtocol.h  UdpSender.cpp  UdpSender.h
tests/: timecode_tests.cpp
tools/: jitter_harness.cpp  sniff_artnet_compare.py  sniff_artnet_tc.py
